--- a/FamilyTreeNet/FamilyTreeNet.csproj
+++ b/FamilyTreeNet/FamilyTreeNet.csproj
@@ -14,6 +14,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\FamilyTree.Infra\FamilyTree.Infra.csproj" />
     <ProjectReference Include="..\FamilyTreeNet.Core\FamilyTreeNet.Core.csproj" />
   </ItemGroup>
 
