I can read through the hardcoded file (but "store" isn't implemented yet)

--- a/FamilyTreeNet/FamilyTreeNet.csproj
+++ b/FamilyTreeNet/FamilyTreeNet.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\sampleFamily.ged" />
+    <EmbeddedResource Include="Resources\sampleFamily.ged" />
   </ItemGroup>
 
 
