move connection string to config

--- a/FamilyTreeNet/appsettings.json
+++ b/FamilyTreeNet/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=familytree;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Application Name=FamilyTreeNet"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
