--- a/FamilyTree.Infra/FamilyTree.Infra.csproj
+++ b/FamilyTree.Infra/FamilyTree.Infra.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190905125827_geneadate.cs" />
+    <Compile Remove="Migrations\20190905125827_geneadate.Designer.cs" />
+    <Compile Remove="Migrations\20190905130220_geneadate.cs" />
+    <Compile Remove="Migrations\20190905130220_geneadate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
