--- a/FamilyTree.Infra.MySql/FamilyTree.Infra.MySql.csproj
+++ b/FamilyTree.Infra.MySql/FamilyTree.Infra.MySql.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="MySqlConnector" Version="0.69.5" />
   </ItemGroup>
 
   <ItemGroup>
