--- a/FamilyTree.Infra.MySql/FamilyTree.Infra.MySql.csproj
+++ b/FamilyTree.Infra.MySql/FamilyTree.Infra.MySql.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="MySqlConnector" Version="0.69.5" />
   </ItemGroup>
 
