updated to core 3.1

--- a/FamilyTreeNet/appsettings.json
+++ b/FamilyTreeNet/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\sqlexpress;Database=familytree;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Application Name=FamilyTreeNet"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=familytree;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Application Name=FamilyTreeNet",
+    "MySqlConnection": "Server=192.168.178.50;Port=3307;Database=family_tree;Uid=familytreeapp;Pwd=FamilyTree-Pa$$2"
   },
   "Logging": {
     "LogLevel": {
