--- a/FamilyTreeNet/appsettings.json
+++ b/FamilyTreeNet/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\sqlexpress;Database=familytree;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Application Name=FamilyTreeNet",
-    "MySqlConnection": "Server=192.168.178.50;Port=3307;Database=family_tree;Uid=familytreeapp;Pwd=FamilyTree-Pa$$2"
+    "MySqlConnection": "Server=192.168.178.50;Port=3307;Database=family_tree;Uid=familytreeapp;Pwd=FamilyTree-Pa$$2",
+    "AuthConnection": "Server=192.168.178.50;Port=3307;Database=family_tree_auth;Uid=familytreeapp;Pwd=FamilyTree-Pa$$2"
   },
   "Logging": {
     "LogLevel": {
