update styling (larger symbols)

--- a/FamilyTreeNet/FamilyTreeNet.csproj
+++ b/FamilyTreeNet/FamilyTreeNet.csproj
@@ -41,4 +41,9 @@
     <ProjectReference Include="..\FamilyTreeNet.Core\FamilyTreeNet.Core.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
